if overflow x is hidden then animation kinda jumpy but spaces correctly and doesnt go off the page BUT it cuts off the blend type text

--- a/src/components/OurBlends/OurBlends.css
+++ b/src/components/OurBlends/OurBlends.css
@@ -56,7 +56,7 @@ line-height: normal;
 letter-spacing: 8px;
 margin-top: 60px;
 margin-bottom:60px;
-right: 100px;
+/* right: 100px; */
 padding-left: 100px;
 
 }
@@ -74,7 +74,7 @@ padding-left: 100px;
 
 
 .panel {
-/* position: relative; */
+position: relative;
 /* width:171px; */
 cursor: pointer;
 max-width: 100%;
@@ -88,8 +88,12 @@ border-left-color: #A2A8AA;
 writing-mode:vertical-lr;
 text-orientation:mixed;
 text-combine-upright: none;
-padding-bottom: 5px;
+padding-bottom: 19px;
+padding-right:10px;
 opacity:20%;
+/* if overflow x is hidden then animation kinda jumpy but spaces correctly and doesnt go off the page
+BUT it cuts off the blend type text */
+overflow-x:hidden;
 
 
 }
@@ -119,6 +123,8 @@ transform-origin: left top;
 transform: scaleX(1);
 transition: transform 0.7s ease-in-out;
 opacity: 100%;
+max-width: 562px;
+
 /* padding-right:50px; */
 
 }
